--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background:#ccc;
+}
+
 #title, .subtitle, .post_title{
     color: blue;
 
@@ -7,4 +11,11 @@
 .post_title{
     font-size: 16px;
     font-style: italic;
+}
+
+.post{
+    background: white;
+    padding: 10px;
+    border: 3px solid #000000;
+    margin: 10px;
 }
